Changes from review

--- a/src/ui/Views/Course/Salary.cshtml
+++ b/src/ui/Views/Course/Salary.cshtml
@@ -47,8 +47,8 @@
                         </div>
                         <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="other-container">
                           <div class="form-group">
-                            <label asp-for="CourseLengthOther" class="govuk-label">Course Length</label>
-                            <input asp-for="CourseLengthOther" type="text" class="govuk-input govuk-!-width-one-half" />
+                            <label asp-for="CourseLengthInput" class="govuk-label">Course Length</label>
+                            <input asp-for="CourseLengthInput" type="text" class="govuk-input govuk-!-width-one-half" />
                           </div>
                         </div>
                       }
