--- a/src/ui/Views/Course/Shared/_SalaryBasedCourseOverview.cshtml
+++ b/src/ui/Views/Course/Shared/_SalaryBasedCourseOverview.cshtml
@@ -22,7 +22,7 @@
         {
           <a href="@url#CourseLength-wrapper" class="govuk-link"><span asp-validation-for="CourseLength"></span></a>
         }
-        @(@courseEnrichment?.CourseLength.DisplayText() == "Other" ? courseEnrichment.CourseLengthOther : courseEnrichment?.CourseLength.DisplayText())
+        @(@courseEnrichment?.CourseLength.DisplayText() == "Other" ? courseEnrichment.CourseLengthInput : courseEnrichment?.CourseLength.DisplayText())
       </dd>
       <dt class="course-parts__fields__label @(salary ? "course-parts__fields__label--error" : "")">
         Salary
