--- a/src/ui/Views/Shared/CopyCourseContentMessage.cshtml
+++ b/src/ui/Views/Shared/CopyCourseContentMessage.cshtml
@@ -5,7 +5,7 @@
 
 @if(copied != null && copied.Any())
 {
-  <div class="govuk-warning-summary" aria-labelledby="warning-summary-heading" tabindex="-1" data-module="error-summary" data-module="copy-course-warning" role="alert">
+  <div class="govuk-warning-summary" aria-labelledby="warning-summary-heading" tabindex="-1" data-module="error-summary" data-copy-course="warning" role="alert">
     <h2 class="govuk-warning-summary__title" id="warning-summary-heading">
       Your changes are not yet saved
     </h2>
@@ -27,7 +27,7 @@
 }
 else if (copied != null)
 {
-  <div class="govuk-error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
+  <div class="govuk-error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1" data-module="error-summary">
     <span class="govuk-body govuk-body-l govuk-!-font-weight-bold" id="error-summary-heading">
       There was no content to copy from course @copiedFrom?.Name (@copiedFrom?.ProgrammeCode)
     </span>
