Make hr breaks visible
* Updates the fees page to match other course pages
* More visible breaks between sections

--- a/src/ui/Views/Course/Salary.cshtml
+++ b/src/ui/Views/Course/Salary.cshtml
@@ -67,7 +67,7 @@
 
           </fieldset>
         </div>
-        <hr class="govuk-section-break govuk-section-break--l">
+        <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
         <h2 class="govuk-heading-l">Salary</h2>
         <p class="govuk-body">Give details about the salary for this course.</p>
         <p class="govuk-body">You should:</p>
