Update success and published green colour
Fixes #200

--- a/src/ui/Assets/Styles/components/_publish-tags.scss
+++ b/src/ui/Assets/Styles/components/_publish-tags.scss
@@ -11,7 +11,7 @@
 }
 
 .govuk-tag--published {
-  background: govuk-colour("green");
+  background: $success-green;
   margin-bottom: govuk-spacing(3);
 }
 
