Code comment for absolute view paths
PR feedback

--- a/src/ui/Views/Error/Index.cshtml
+++ b/src/ui/Views/Error/Index.cshtml
@@ -5,6 +5,7 @@
 
     var statusCode = Model;
     var errorViewPage = "";
+    // using full view paths so they can be found when view is rendered from McExceptionFilter
     switch (statusCode)
     {
         case 401:
