--- a/src/ui/Views/Shared/CopyCourseContent.cshtml
+++ b/src/ui/Views/Shared/CopyCourseContent.cshtml
@@ -11,7 +11,7 @@
 }
 else
 {
-  <h4 class="govuk-heading-m">Use content from another course</h4>
+  <h4 class="govuk-heading-m">Copy content from another course</h4>
   <p class="govuk-body">Fill in this page with content from another course.</p>
   <p class="govuk-body">This will replace any existing content.</p>
   <form class="govuk-form" method="GET">
