Add guidance if salary is unknown

--- a/src/ui/Views/Course/Salary.cshtml
+++ b/src/ui/Views/Course/Salary.cshtml
@@ -72,7 +72,7 @@
         <p class="govuk-body">Give details about the salary for this course.</p>
         <p class="govuk-body">You should:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>give an indication of the salary</li>
+          <li>give an indication of the salary – if you don't have the figure, say how it will be calculated (eg using the unqualified teachers’ pay scales)</li>
           <li>say whether there are any fees or others costs – if there are no fees for this course, you should also say so</li>
         </ul>
         <div class="govuk-character-count" data-module="character-count" data-maxwords="250">
