Indicate that you can edit after publish

--- a/src/ui/Views/Course/Show.cshtml
+++ b/src/ui/Views/Course/Show.cshtml
@@ -183,6 +183,7 @@
           <h4 class="govuk-heading-m">Publish</h4>
           <p class="govuk-body">Publish your changes.</p>
           <p class="govuk-body">Applicants will see published content from October.</p>
+          <p class="govuk-body">You can make changes to this course after publishing it.</p>
 
           <form asp-route="publish" method="post">
             <input type="submit" class="govuk-button" value="Publish" />
