--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -113,6 +113,7 @@
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
             <p class="govuk-body">Applicants will see published information from October.</p>
+            <p class="govuk-body">You can make changes to this after publishing it.</p>
 
             <form asp-controller="Organisation" asp-action="about" method="post">
               <input type="submit" class="govuk-button" value="Publish" />
@@ -131,6 +132,7 @@
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
             <p class="govuk-body">Applicants will see published information from October.</p>
+            <p class="govuk-body">You can make changes to this after publishing it.</p>
 
             <form asp-controller="Organisation" asp-action="about" method="post">
               <input type="submit" class="govuk-button" value="Publish" />
@@ -156,6 +158,7 @@
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
             <p class="govuk-body">Applicants will see published information from October.</p>
+            <p class="govuk-body">You can make changes to this after publishing it.</p>
 
             <form asp-controller="Organisation" asp-action="about" method="post">
               <input type="hidden" asp-for="@Model.PublishOrganisation" value="true" />
@@ -175,6 +178,7 @@
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
             <p class="govuk-body">Applicants will see published information from October.</p>
+            <p class="govuk-body">You can make changes to this after publishing it.</p>
 
             <form asp-controller="Organisation" asp-action="about" method="post">
               <input type="hidden" asp-for="@Model.PublishOrganisation" value="true" />
