--- a/src/ui/Views/Shared/_Layout_base.cshtml
+++ b/src/ui/Views/Shared/_Layout_base.cshtml
@@ -11,19 +11,14 @@
 
     <link rel="stylesheet" href="~/application.css" asp-append-version="true" />
 
-    <!--[if lt IE 9]>
-        <script src="/html5-shiv/html5shiv.js"></script>
-    <![endif]-->
-
     <link rel="shortcut icon" href="~/images/favicon.ico" type="image/x-icon" asp-append-version="true" />
-    <link rel="mask-icon" href="~/images/gov.uk_logotype_crown.svg" color="#0b0c0c" asp-append-version="true" />
-    <link rel="apple-touch-icon" sizes="180x180" href="~/images/apple-touch-icon-180x180.png" asp-append-version="true" />
-    <link rel="apple-touch-icon" sizes="167x167" href="~/images/apple-touch-icon-167x167.png" asp-append-version="true" />
-    <link rel="apple-touch-icon" sizes="152x152" href="~/images/apple-touch-icon-152x152.png" asp-append-version="true" />
-    <link rel="apple-touch-icon" href="~/images/apple-touch-icon.png" asp-append-version="true" />
+    <link rel="mask-icon" href="~/images/gov.uk-mask-icon.svg" color="#0b0c0c" asp-append-version="true" />
+    <link rel="apple-touch-icon" sizes="180x180" href="~/images/govuk-apple-touch-icon-180x180.png" asp-append-version="true" />
+    <link rel="apple-touch-icon" sizes="167x167" href="~/images/govuk-apple-touch-icon-167x167.png" asp-append-version="true" />
+    <link rel="apple-touch-icon" sizes="152x152" href="~/images/govuk-apple-touch-icon-152x152.png" asp-append-version="true" />
+    <link rel="apple-touch-icon" href="~/images/govuk-apple-touch-icon.png" asp-append-version="true" />
 
     <meta name="theme-color" content="#0b0c0c" />
-    <meta property="og:image" content="~/images/opengraph-image.png" />
 
     @RenderSection("head", required: false)
 </head>
