Fix publish form action

--- a/src/ui/Views/Organisation/Details.cshtml
+++ b/src/ui/Views/Organisation/Details.cshtml
@@ -170,7 +170,7 @@
             <p class="govuk-body">Applicants will see published information from October.</p>
             <p class="govuk-body">You can make changes to this after publishing it.</p>
 
-            <form asp-controller="Organisation" asp-action="about" method="post">
+            <form asp-controller="Organisation" asp-action="Details" method="post">
               <input type="submit" class="govuk-button" value="Publish" />
             </form>
             break;
