code review feeback

--- a/src/ui/Views/Shared/_Layout_base.cshtml
+++ b/src/ui/Views/Shared/_Layout_base.cshtml
@@ -19,6 +19,7 @@
     <link rel="apple-touch-icon" href="~/images/govuk-apple-touch-icon.png" asp-append-version="true" />
 
     <meta name="theme-color" content="#0b0c0c" />
+    <meta property="og:image" content="~/images/govuk-opengraph-image.png" />
 
     @RenderSection("head", required: false)
 </head>
