--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -88,3 +88,11 @@ $success-green: #00823b;
     margin-bottom: govuk-spacing(6);
   }
 }
+
+// Custom list style
+.govuk-list--dash {
+  padding-left: govuk-spacing(4);
+  list-style-image: url('/images/dash.png');
+  margin-bottom: govuk-spacing(8);
+}
+
