Use distinct text for each edit link
Allow screenreaders to differentiate between the links

--- a/src/ui/Views/Course/Shared/_FeeBasedCourseOverview.cshtml
+++ b/src/ui/Views/Course/Shared/_FeeBasedCourseOverview.cshtml
@@ -15,7 +15,7 @@
 
   <div class="course-parts__item">
     <h3 class="course-parts__title">Course length and fees</h3>
-    <a class="course-parts__action" href="@url">Edit</a>
+    <a class="course-parts__action" href="@url">Edit<span class="govuk-visually-hidden"> course length and fees</span></a>
     <dl class="course-parts__fields">
       <dt class="course-parts__fields__label @(course_length ? "course-parts__fields__label--error" : "")">
         Course length
@@ -65,4 +65,3 @@
       </dd>
     </dl>
   </div>
-
