--- a/src/ui/Views/Course/Shared/_SalaryBasedCourseOverview.cshtml
+++ b/src/ui/Views/Course/Shared/_SalaryBasedCourseOverview.cshtml
@@ -12,7 +12,7 @@
 
   <div class="course-parts__item">
     <h3 class="course-parts__title">Course length and salary</h3>
-    <a class="course-parts__action" href="@url">Edit</a>
+    <a class="course-parts__action" href="@url">Edit<span class="govuk-visually-hidden"> course length and salary</span></a>
     <dl class="course-parts__fields">
       <dt class="course-parts__fields__label @(course_length ? "course-parts__fields__label--error" : "")">
         Course length
