--- a/src/ui/Views/Course/Shared/_AboutCourseOverview.cshtml
+++ b/src/ui/Views/Course/Shared/_AboutCourseOverview.cshtml
@@ -12,7 +12,7 @@
 
 <div class="course-parts__item">
   <h3 class="course-parts__title">About this course</h3>
-  <a class="course-parts__action" href="@url">Edit</a>
+  <a class="course-parts__action" href="@url">Edit<span class="govuk-visually-hidden"> about this course</span></a>
   <dl class="course-parts__fields">
     <dt class="course-parts__fields__label @(about_course ? "course-parts__fields__label--error" : "")" id="section-AboutCourse">
         About this course
