--- a/src/ui/Views/Course/Shared/_RequirementsCourseOverview.cshtml
+++ b/src/ui/Views/Course/Shared/_RequirementsCourseOverview.cshtml
@@ -12,7 +12,7 @@
 
 <div class="course-parts__item">
   <h3 class="course-parts__title">Requirements and eligbility</h3>
-  <a class="course-parts__action" href="@url">Edit</a>
+  <a class="course-parts__action" href="@url">Edit<span class="govuk-visually-hidden"> requirements and eligbility</span></a>
   <dl class="course-parts__fields">
     <dt class="course-parts__fields__label @(qualifications ? "course-parts__fields__label--error" : "")" id="section-Qualifications">
       Qualifications needed
@@ -46,4 +46,3 @@
     </dd>
   </dl>
 </div>
-
