--- a/src/ui/Views/Organisation/Details.cshtml
+++ b/src/ui/Views/Organisation/Details.cshtml
@@ -90,7 +90,7 @@
         </div>
         <div class="course-parts__item">
           <h3 class="course-parts__title">About your organisation</h3>
-          <a class="course-parts__action" href="@Url.Action("About", "Organisation", new {ucasCode = Model.InstitutionCode})">Edit</a>
+          <a class="course-parts__action" href="@Url.Action("About", "Organisation", new {ucasCode = Model.InstitutionCode})">Edit<span class="govuk-visually-hidden"> about your organisation</span></a>
           <dl class="course-parts__fields">
             <dt class="course-parts__fields__label @(train_with_us ? "course-parts__fields__label--error" : "")" id="section-TrainWithUs">About your organisation</dt>
             <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(Model.TrainWithUs) ? "course-parts__fields__value--empty" : "")">
