Add info about org contact details

--- a/src/ui/Views/Organisation/Details.cshtml
+++ b/src/ui/Views/Organisation/Details.cshtml
@@ -34,6 +34,9 @@
       <div class="course-parts">
         <div class="course-parts__item">
           <h3 class="course-parts__title">Contact details from UCAS</h3>
+          <p class="govuk-body">
+            We’ve imported these details from UCAS Entry Profiles. You’ll soon be able to edit them in this service. To make any changes to them now, email us at <a href="mailto:becomingateacher@digital.education.gov.uk?subject=Update organisation contact details">becomingateacher@digital.education.gov.uk</a>.
+          </p>
           <dl class="govuk-list--description" role="contentinfo">
             <dt class="govuk-list--description__label">Training provider code</dt>
             <dd>@Model.InstitutionCode.ToUpper()</dd>
